AM_CXXFLAGS = -pedantic -Wno-long-long -Werror -Wall -Wextra -Weffc++ -fno-default-inline -pipe

noinst_LIBRARIES = libmoshutil.a

libmoshutil_a_SOURCES = swrite.cc swrite.h dos_assert.h selfpipe-internal.h selfpipe.h selfpipe_finish.c selfpipe_init.c selfpipe_internal.c selfpipe_read.c selfpipe_trap.c selfpipe_trapset.c selfpipe_untrap.c fd_close.c fd_read.c fd_write.c pipe_internal.c sanitize_read.c skasigaction.c skasig_dfl.c sig_restoreto.c coe.c ndelay_on.c
