AM_CFLAGS = -pedantic -Wall -Wextra -pipe

noinst_LIBRARIES = libstddjb.a

libstddjb_a_SOURCES = \
	allreadwrite.h \
	coe.c \
	djbunix.h \
	error.h \
	fd_close.c \
	fd_read.c \
	fd_write.c \
	gccattributes.h \
	ndelay_on.c \
	nsig.h \
	pipe_internal.c \
	sanitize_read.c \
	selfpipe-internal.h \
	selfpipe.h \
	selfpipe_finish.c \
	selfpipe_init.c \
	selfpipe_internal.c \
	selfpipe_read.c \
	selfpipe_trap.c \
	selfpipe_trapset.c \
	selfpipe_untrap.c \
	sig.h \
	sig_restoreto.c \
	skalibs-config.h \
	skasig_dfl.c \
	skasigaction.c \
	sysdeps.h \
	uint64.h

EXTRA_DIST = COPYING
